4. Ensure library is loaded the very first time Cantata is run (ie. after
   connected to MPD via initial settings wizard).
5. When song is updated in context view, abort any current network jobs.
6. Fix expand all / collapse all actions. Expand all will only expand 1 level
   for main browsers.
7. When reading lines from user mpd.conf file, read as utf-8.

1.3.2
-----
 1. In cover/artist dialog, when attempting to save an image into Cantata's
    cache folder - ensure the 'covers' sub-folder is created.
 2. When saving artist image from cover dialog, if set to save in MPD folder and
    song's path does not have 2 folder elements then save in cache folder.
    Cantata will only save artist images, and backdrops, in MPD folder if the
    folder structure is (e.g.) Artist/Album/Track.mp3
 3. Use case-insensitive sort of folder view items when adding to playqueue.
 4. When determining the 'basic' artist of a track, if albumartist is set and
    artist is not, then use albumartist.
 5. For the web-links in the context view, replace ampersand and question mark
    characters in artist names with the relevant URL encoding.
 6. Use CMake to locate X11 libraries and headers.
 7. Set minimum size for initial settings wizard.
 8. If buddy of a checkbox or radio is clicked, then toggle check or radio.
 9. Disable context-view cancel actions until a job is created.
10. When searching models, also search composer field.
11. Fix enabling of "Initially collapse albums" in playlists settings tab.
12. Fix grouped playlist view initial state when set to initially collapse
    albums.
13. Fix calculating size of song files when copying off a device that has been
    previously scanned, and its contents cached.
14. When copying from a CD, check that we have enough space for track that was
    encoded with a 1:18 ratio. Just a sanity check really.
15. Fix song notification mem-leak (Linux only).
16. When transitioning between backdrops in cover view, draw old at correct
    position.