@@ -37,6 +37,7 @@ public:
     virtual ~ActionModel() { }
     
     virtual QVariant data(const QModelIndex &index, int role = Qt::DisplayRole) const;
+    virtual void resetModel() { reset(); }
 };
 
 Q_DECLARE_METATYPE(QList<Action *>)
